refactor:规范化响应体
